WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294108
[visionOS] We shouldn't use WKSeparatedImage layers for animated images
https://bugs.webkit.org/show_bug.cgi?id=294108
Summary
[visionOS] We shouldn't use WKSeparatedImage layers for animated images
Etienne
Reported
2025-06-06 01:51:59 PDT
We shouldn't use WKSeparatedImage layers for animated images.
Attachments
Add attachment
proposed patch, testcase, etc.
Etienne
Comment 1
2025-06-06 02:03:11 PDT
<
rdar://problem/152706039
>
Etienne
Comment 2
2025-06-06 02:03:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46411
EWS
Comment 3
2025-06-09 10:48:02 PDT
Committed
296006@main
(c02bd8528b3f): <
https://commits.webkit.org/296006@main
> Reviewed commits have been landed. Closing PR #46411 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug