[visionOS] We shouldn't use WKSeparatedImage layers for animated images https://bugs.webkit.org/show_bug.cgi?id=294108 <rdar://152706039>

Reviewed by Simon Fraser.

Check `Image::isAnimated()` when updating separated properties to avoid
using a `WKSeparatedImage` layer type for GIFs (and others).

* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateSeparatedProperties):
Add the check.

* LayoutTests/platform/visionos/transforms/separated-image-animated-expected.txt: Added.
* LayoutTests/platform/visionos/transforms/separated-image-animated.html: Added.
Add a test.
* LayoutTests/platform/visionos/TestExpectations:
Checked locally, the suite is currently skipped in EWS.

Canonical link: https://commits.webkit.org/296006@main